sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: type boolean
  var ok:boolean = false
         ^AlgBubbleSort1:6: error: not found: value getNombreValeur
    for (i<- 1 to getNombreValeur()-1){
                  ^