sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var ok:boolean = false
  while (!ok){
    ok=true
    for (i<- 1 to getNombreValeur()-1){
      if (plusPetit(i,i+1)){
        echange(i,i+1)
        ok = false
      }
    }
  }
}